# cpp-template

./: bld.sh  install.sh  setup.sh  test.sh
src/: cpp_template_lib.cpp  cpp_template_test.cpp  meson.build
src/cpp_template/: meson.build
